Set up the card decks

--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,10 @@
     </script>
   </head>
   <body>
-
+    <button type="button" id="startGame" class="btn btn-primary">Start Game</button>
+    <button type="button" id="dontPlay" class="btn btn-primary">Don't Play</button>
+    <button type="button" id="endTurn" class="btn btn-primary">End Turn</button>
+    <button type="button" id="callCravate" class="btn btn-primary">Cravate!</button>
     <div class="container">
 
       <div class="row">
