--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         </div>
 
-        <div class = "card1 col-xs-3">
+        <div id="player1FaceDown" class = "card1 col-xs-3">
           <img src="images/card-images/blue_back.png" alt="" >
 
         </div>
@@ -41,7 +41,7 @@
 
 
       <div class="row playPile">
-        <div class="col-xs-2 col-xs-offset-1 solitairePile solitairePileLeft" >
+        <div id="solitairePile1" class="col-xs-4 solitairePile offsetPile solitairePileLeft" >
 
         </div>
         <div class="col-xs-2 acePileLeft card2">
@@ -50,15 +50,13 @@
         <div class="col-xs-2 acePileRight card1">
 
         </div>
-
-
-        <div class="col-xs-2 solitairePile solitairePileRight">
+        <div id="solitairePile2" class="col-xs-4 solitairePile solitairePileRight">
 
         </div>
       </div>
 
       <div class="row playPile">
-        <div class="col-xs-2 col-xs-offset-1 solitairePile solitairePileLeft ">
+        <div id="solitairePile3" class="col-xs-4 solitairePile solitairePileLeft ">
 
         </div>
         <div class="col-xs-2  acePileLeft card2">
@@ -67,12 +65,12 @@
         <div class="col-xs-2 acePileRight card1">
 
         </div>
-        <div class="col-xs-2 solitairePile solitairePileRight">
+        <div id="solitairePile4" class="col-xs-4 solitairePile solitairePileRight">
 
         </div>
       </div>
       <div class="row playPile">
-        <div class="col-xs-2 col-xs-offset-1 solitairePile solitairePileLeft">
+        <div id="solitairePile5" class="col-xs-4 solitairePile solitairePileLeft">
 
         </div>
         <div class="col-xs-2 acePileLeft card2">
@@ -81,12 +79,12 @@
         <div class="col-xs-2 acePileRight card1">
 
         </div>
-        <div class="col-xs-2 solitairePile solitairePileRight">
+        <div id="solitairePile6" class="col-xs-4 solitairePile solitairePileRight">
 
         </div>
       </div>
       <div class="row playPile">
-        <div class="col-xs-2 col-xs-offset-1 solitairePile solitairePileLeft">
+        <div id="solitairePile7" class="col-xs-4 solitairePile solitairePileLeft">
 
         </div>
         <div class="col-xs-2 acePileLeft card2">
@@ -95,7 +93,7 @@
         <div class="col-xs-2 acePileRight card1">
 
         </div>
-        <div class="col-xs-2 solitairePile solitairePileRight">
+        <div id="solitairePile8" class="col-xs-4 solitairePile solitairePileRight">
 
         </div>
       </div>
@@ -104,7 +102,7 @@
         <div id="player2Talon" class = "card1 col-xs-6">
           <img src="images/card-images/grey_back.png" alt="" >
         </div>
-        <div class="card2 col-xs-3" >
+        <div id="player2FaceDown" class="card2 col-xs-3" >
           <img src="images/card-images/grey_back.png" alt="" >
 
         </div>
