Fixed the card stacking so outside piles now follow logic

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <div id="solitairePile1" class="col-xs-4 solitairePile offsetPile solitairePileLeft" >
 
         </div>
-        <div class="col-xs-2 acePileLeft card2">
+        <div id="acePile1" class="col-xs-2 acePileLeft acePile card2">
 
         </div>
-        <div class="col-xs-2 acePileRight card1">
+        <div id="acePile2" class="col-xs-2 acePileRight acePile card1">
 
         </div>
         <div id="solitairePile2" class="col-xs-4 solitairePile solitairePileRight">
@@ -59,10 +59,10 @@
         <div id="solitairePile3" class="col-xs-4 solitairePile solitairePileLeft ">
 
         </div>
-        <div class="col-xs-2  acePileLeft card2">
+        <div id="acePile3" class="col-xs-2  acePileLeft acePile card2">
 
         </div>
-        <div class="col-xs-2 acePileRight card1">
+        <div id="acePile4" class="col-xs-2 acePileRight acePile card1">
 
         </div>
         <div id="solitairePile4" class="col-xs-4 solitairePile solitairePileRight">
@@ -73,10 +73,10 @@
         <div id="solitairePile5" class="col-xs-4 solitairePile solitairePileLeft">
 
         </div>
-        <div class="col-xs-2 acePileLeft card2">
+        <div id="acePile5" class="col-xs-2 acePileLeft acePile card2">
 
         </div>
-        <div class="col-xs-2 acePileRight card1">
+        <div id="acePile6" class="col-xs-2 acePileRight acePile card1">
 
         </div>
         <div id="solitairePile6" class="col-xs-4 solitairePile solitairePileRight">
@@ -87,10 +87,10 @@
         <div id="solitairePile7" class="col-xs-4 solitairePile solitairePileLeft">
 
         </div>
-        <div class="col-xs-2 acePileLeft card2">
+        <div id="acePile7" class="col-xs-2 acePileLeft acePile card2">
 
         </div>
-        <div class="col-xs-2 acePileRight card1">
+        <div id="acePile8" class="col-xs-2 acePileRight acePile card1">
 
         </div>
         <div id="solitairePile8" class="col-xs-4 solitairePile solitairePileRight">
